Closed Bug 1750640 Opened 2 years ago Closed 2 years ago

ReadableByteStreamController isn't properly traced

Categories

(Core :: DOM: Streams, defect)

defect

Tracking

()

RESOLVED FIXED
98 Branch
Tracking Status
firefox98 --- fixed

People

(Reporter: mgaudet, Assigned: mgaudet)

References

Details

Attachments

(1 file)

See discussion on Bug 1750564.

Assignee: nobody → mgaudet
Status: NEW → ASSIGNED
Blocks: 1735656
Pushed by mgaudet@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/a28c2b28440b
Correct tracing for ReadableByteStreamController r=saschanaz
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 98 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: