Bug 1750640 - Correct tracing for ReadableByteStreamController r=saschanaz

Differential Revision: https://phabricator.services.mozilla.com/D136187